<resources>
    <string name="app_name">Movies</string>
    <string name="list_de_films">Lista de filmes</string>
    <string name="movies_item_description">Com altos e baixos, produção da Netflix em …</string>
    <string name="movies_item_title">O Gambito da Rainha</string>
    <string name="movies_item_gener">Drama | 2020 | 2h40m | 18 anos</string>
    <string name="activity_movie_subtitle"> 〽ovies </string>
    <string name="activity_main_subtitletitle">Com altos e baixos, produção da Netflix em seu maior apelo na atuação e no magnetismo de Naya Taylor</string>
    <string name="activity_main_textdescription">Não basta querer revisitar outras décadas, é preciso saber encaixar as referências.  E isso a figurinista de Berlim, Gabriele Binder, faz coos em escalada social e emocional, que expressam exatamente cada momento…</string>
    <string name="arquivo_netflix">arquivo@Netflix</string>
    <string name="button">Voltar</string>
    <string name="ano">12/10/2021</string>
    <string name="movieDuration">145 minute</string>
    <string name="genermain">TERROR</string>
    <string name="etariemain">16+</string>
    <string name="populitymain">0.98</string>
    <string name="string_etariemain">16+ </string>
    <string name="titleDescription">Company</string>
    <string name="preferencia">8.7</string>
    <string name="votocount">8786</string>
    <string name="movieAdult">Adult</string>
    <string name="popularity">22%</string>
    <string name="string_titlemain">About the movie</string>
    <string name="descriptionComany">Descrição da compania</string>

</resources>