<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MovieList">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:padding="5dp"
            android:text="@string/activity_movie_subtitle"
            android:textColor="#2F3435"
            android:textSize="18sp"
            android:textStyle="italic"


            android:layout_marginStart="20dp"/>


        <EditText
            android:id="@+id/editView"
            android:layout_width="381dp"
            android:layout_marginStart="15dp"
            android:layout_height="wrap_content"
            android:hint="@string/list_de_films"
            android:textColor="#5e605f"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:autofillHints="@string/app_name"
            android:inputType="text"
            android:textStyle="italic"
            android:textSize="12sp"
            android:background="@drawable/img"/>




        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="#EAC306" />

        <androidx.recyclerview.widget.RecyclerView

            android:id="@+id/moviesList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="10"
            tools:listitem="@layout/movies_item" />
    </LinearLayout>
</layout>