<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="titulo"
            type="String" />

        <variable
            name="sinopse"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif"
            android:text="@string/movies_item_title"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:padding="10dp"
            android:paddingEnd="15dp"
            android:text="@string/activity_main_subtitletitle"
            android:textSize="12sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/genero"

            tools:ignore="RtlSymmetry" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/star1"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_marginStart="10dp"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="@id/genero"
            app:layout_constraintStart_toEndOf="@id/genero"
            app:layout_constraintTop_toTopOf="@id/genero"
            app:srcCompat="@drawable/estrela"
            />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/star2"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_marginStart="25dp"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="@id/genero"
            app:layout_constraintStart_toEndOf="@id/genero"
            app:layout_constraintTop_toTopOf="@id/genero"
            app:srcCompat="@drawable/estrela" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/star3"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_marginStart="40dp"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="@id/genero"
            app:layout_constraintStart_toEndOf="@id/genero"
            app:layout_constraintTop_toTopOf="@id/genero"
            app:srcCompat="@drawable/estrela" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/star4"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_marginStart="55dp"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="@id/genero"
            app:layout_constraintStart_toEndOf="@id/genero"
            app:layout_constraintTop_toTopOf="@id/genero"
            app:srcCompat="@drawable/estrela" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/star5"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_marginStart="70dp"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="@id/genero"
            app:layout_constraintStart_toEndOf="@id/genero"
            app:layout_constraintTop_toTopOf="@id/genero"
            app:srcCompat="@drawable/estrela" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/genero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movies_item_gener"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@id/title"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/title"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:justificationMode="inter_word"
            android:padding="25dp"
            android:text="@string/activity_main_textdescription"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/poster"
            tools:targetApi="o" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonfi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:padding="5dp"
            android:text="@string/button"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/poster"
            android:layout_width="350dp"
            android:layout_height="200dp"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description"
            app:srcCompat="@drawable/capa" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/font"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="0dp"
            android:text="@string/arquivo_netflix"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@id/poster"
            app:layout_constraintTop_toBottomOf="@id/poster" />


        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="#CCCC"
            app:layout_constraintBottom_toBottomOf="parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="#EAC306"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
